# AesEncryptJNI

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/cjd/jniencryption/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aes.c  aes.h  encrypt_jni.cpp  encrypt_jni.h
app/src/main/java/com/cjd/jniencryption/: MainActivity.java
app/src/main/java/com/cjd/jniencryption/utils/: EncryptJNI.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/test/java/com/cjd/jniencryption/: ExampleUnitTest.java
encryption/: build.gradle
encryption/src/androidTest/java/com/cjd/encryption/: ExampleInstrumentedTest.java
encryption/src/main/: AndroidManifest.xml
encryption/src/main/cpp/: CMakeLists.txt  aes.c  base64.h  check_signature.c  check_signature.cpp  check_signature.h  encrypt_jni.cpp
encryption/src/main/java/com/cjd/encryption/: EncryptJNI.java
encryption/src/test/java/com/cjd/encryption/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
